# zero2prod

./: .gitignore  Cargo.toml  Dockerfile  README.md  main.tf  spec_do.yaml  terraform.tfstate  terraform.tfstate.1731856746.backup  terraform.tfstate.backup  variables.tf
.github/workflows/: audit.yml  deploy.yml  general.yml
config/: base.yaml
gcloud/: policy.yaml  spec.yaml
migrations/: 20241003022645_create_subscriptions_table.sql
scripts/: init_db.sh  init_db_mongo.sh  init_db_psql.sh
src/: config.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
